[tool.poetry]
name = "flm-core"
version = "0.3.0alpha000017" # ALSO BUMP IN flm/flm/__init__.py
description = "Flexible Latex-like Markup"
authors = ["Philippe Faist"]
license = "MIT"
readme = "README.md"
include = ["flm/main/templates/**/*"]
packages = [
    { include = "flm" },
]

[tool.poetry.scripts]
flm = 'flm.__main__:run_main'

[tool.poetry.dependencies]
python = "^3.8"
pylatexenc = { version = "^3.0a31", allow-prereleases = true }

[tool.poetry.group.maincmdl]
optional = false

[tool.poetry.group.maincmdl.dependencies]
watchfiles = "^0.22.0"
python-frontmatter = "^1.0.0"
PyYAML = ">=5.0"
colorlog = "^6.7.0"
pillow = "^10.4.0"
cairosvg = "^2.7.1"
pypdf = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.3.0"
toml = "^0.10.2"

[tool.poetry.group.buildjslib]
optional = true

[tool.poetry.group.buildjslib.dependencies]
Transcrypt = ">=3.9.0"
PyYAML = ">=5.0"

[tool.poetry.group.builddoc]
optional = true

[tool.poetry.group.builddoc.dependencies]
Sphinx = ">=5.0.0"
sphinx-issues = ">=3.0.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




[tool.pytest.ini_options]
testpaths = [
    "test",
]
