[tool.poetry]
name = "flm-core"
version = "0.3.0alpha000026" # ALSO BUMP IN flm/flm/__init__.py
description = "Flexible Latex-like Markup"
authors = ["Philippe Faist"]
license = "MIT"
readme = "README.md"
include = ["flm/main/templates/**/*"]
packages = [
    { include = "flm" },
]

[tool.poetry.scripts]
flm = 'flm.__main__:run_main'

# define extras by pointing to the group
[tool.poetry.extras]
maincmdl = ['websockets', 'watchfiles', 'python-frontmatter', 'PyYAML', 'colorlog', 'pillow', 'cairosvg', 'pypdf']


[tool.poetry.dependencies]
python = "^3.9"
pylatexenc = { version = "^3.0a32", allow-prereleases = true }

# for maincmdl:
websockets = { version = "^15.0", optional = true }
watchfiles = { version = "^1.0.4", optional = true }
python-frontmatter = { version = "^1.0.0", optional = true }
PyYAML = { version = ">=5.0", optional = true }
colorlog = { version = "^6.7.0", optional = true }
pillow = { version = "^10.4.0", optional = true }
cairosvg = { version = "^2.7.1", optional = true }
pypdf = { version = "^6.1.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
ipython = "^8.3.0"
toml = "^0.10.2"

[tool.poetry.group.buildjslib]
optional = true

[tool.poetry.group.buildjslib.dependencies]
Transcrypt = "==3.9.3"
PyYAML = ">=5.0"

[tool.poetry.group.builddoc]
optional = true

[tool.poetry.group.builddoc.dependencies]
Sphinx = ">=5.0.0"
sphinx-issues = ">=3.0.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




[tool.pytest.ini_options]
testpaths = [
    "test",
]
